--- a/finlit/assets/index.html
+++ b/finlit/assets/index.html
@@ -84,7 +84,7 @@
     
         <div class="container2" >
             <h1 class="font-weight-light" id="contact">Get in touch with us</h1>
-            <p class="lead">The webapp is being developed by team Titans. Following are our members.<br><ul class="lead"><li>Shivam Bunge</li><li>Atharva Borawake</li><li>Ishwar Shelke</li><li>Sanskar Mundra</li></ul></p>
+            <p class="lead">The webapp is being developed by team Titans. Following are our members.<br><ul class="lead"><li>Shivam Bunge</li><li>Atharva Borawake</li><li>Sanskar Mundra</li></ul></p>
             <p class="lead">Reach us<br>shivambunge9898@gmail.com<br>borawakeatharva2002@gmail.com</p>
         </div>
     </section>
