--- a/finlit/html/pg1-eng.html
+++ b/finlit/html/pg1-eng.html
@@ -110,7 +110,13 @@ h1{
     text-align: center;
 }
 .ta{
-    /* background-color: #04009A; */
+    background-color: #04009A;
+    
+    font-size: 20px;
+    padding: 8px;
+    border-radius: 10px;
+}
+.but{
     background-color: #F21170;
     font-size: 20px;
     padding: 8px;
@@ -174,7 +180,8 @@ h1{
                     <h3 class="normal options">
                         <form action="prof_ch/advice" method="POST">
                             {% csrf_token %}
-                            <input type="submit" value="advice" name="advice">
+                            <button class="ta open_button btn btn-dark" type="submit">Take Advice</button>
+
                         </form>
                         <div class="hd">                        
                             <li>What are Stocks and Stock Market? </li>
@@ -188,7 +195,8 @@ h1{
                 <div class="text-center">
                     <form action="prof_ch/invest" method="POST">
                         {% csrf_token %}
-                        <input type="submit" value="Invest" name="invest">
+                        <button class="but open_button btn btn-dark" type="submit">Invest</button>
+
                     </form>
                 </div>
 
