--- a/finlit/html/pg3.html
+++ b/finlit/html/pg3.html
@@ -98,7 +98,12 @@
             display: none;
         }
 
-
+        .but{
+            background-color: #F21170;
+            font-size: 20px;
+            padding: 8px;
+            border-radius: 10px;
+        }
 
         img {
             height: 250px;
@@ -174,8 +179,8 @@
         }
 
         .ta {
-            /* background-color: #04009A; */
-            background-color: #12084b;
+            background-color: #04009A;
+            
             font-size: 20px;
             padding: 8px;
             border-radius: 10px;
@@ -199,7 +204,8 @@
                     <div class="text-center ">
                         <form action="advice" method="POST">
                             {% csrf_token %}
-                            <input type="submit" value="advice" name="advice">
+                            <button class="ta open_button btn btn-dark" type="submit">Take Advice</button>
+
                         </form>
                     </div>
                     <!-- <div class="hd">                        
@@ -272,14 +278,18 @@
                     <div class="text-center">
                         <form action="withdraw" method="POST">
                             {% csrf_token %}
-                            <input type="submit" value="Withdraw" name="withdraw">
+                            <!-- <input type="submit" value="Withdraw" name="withdraw"> -->
+                            <button class="but open_button btn btn-dark" type="submit">Withdraw</button>
+
                         </form>
                     </div>
 
                     <div class="text-center">
                         <form action="invest" method="POST">
                             {% csrf_token %}
-                            <input type="submit" value="Invest" name="invest">
+                            <!-- <input type="submit" value="Invest" name="invest"> -->
+                            <button class="but open_button btn btn-dark" type="submit">Invest</button>
+
                         </form>
                     </div>
                 </div>
