--- a/finlit/html/pg5.html
+++ b/finlit/html/pg5.html
@@ -170,7 +170,12 @@
         .options {
             color: #99154E;
         }
-
+        .but{
+            background-color: #F21170;
+            font-size: 20px;
+            padding: 8px;
+            border-radius: 10px;
+        }
         h1 {
             border-bottom: 1px solid black;
             color: rgb(194, 166, 11);
@@ -180,7 +185,7 @@
 
         .ta {
             /* background-color: #04009A; */
-            background-color: #F21170;
+            background-color: #04009A;
             font-size: 20px;
             padding: 8px;
             border-radius: 10px;
@@ -251,7 +256,9 @@
 
                 <form action="advice" method="POST">
                     {% csrf_token %}
-                    <input type="submit" value="advice" name="advice">
+                    <button class="ta open_button btn btn-dark" type="submit">Advice</button>
+
+                    <!-- <input type="submit" value="advice" name="advice"> -->
                 </form>
 
                 <button type="button" class="ta open_button btn btn-dark"><a
@@ -271,14 +278,18 @@
             <div class="text-center">
                 <form action="withdraw" method="POST">
                     {% csrf_token %}
-                    <input type="submit" value="Withdraw" name="withdraw">
+                    <!-- <input type="submit" value="Withdraw" name="withdraw"> -->
+                    <button class="but open_button btn btn-dark" type="submit">Withdraw</button>
+
                 </form>
             </div>
 
             <div class="text-center">
                 <form action="invest" method="POST">
                     {% csrf_token %}
-                    <input type="submit" value="Invest" name="invest">
+                    <!-- <input type="submit" value="Invest" name="invest"> -->
+                    <button class="but open_button btn btn-dark" type="submit">Invest</button>
+
                 </form>
             </div>
         </div>
