--- a/finlit/html/withdraw.html
+++ b/finlit/html/withdraw.html
@@ -7,6 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
+        body{
+            background: linear-gradient(to right, rgba(253, 253, 253, 0.959), rgb(140, 211, 233));
+        }
         .wd-container {
             width: 500px;
             margin: 50px auto;
@@ -28,8 +31,9 @@
         }
 
         #bank-bal{
-            color: rgb(235, 110, 27);
+            color: rgb(235, 27, 27);
             font-size: 30px;
+            font-family: "Lucida handwriting";
         }
 
         #submit{
@@ -42,6 +46,13 @@
 
         #submit:hover{
             background-color: rgb(34, 178, 65);
+        }
+        
+        label{
+            font-size: 18px;
+            font-weight: bold;
+            color: rgb(255, 76, 5);
+            font-family:verdana;
         }
     </style>
 </head>
