--- a/html/pg2.html
+++ b/html/pg2.html
@@ -219,12 +219,11 @@
             <br>
             <div class="open_button cursive1">Also since childhood you always wished to have your own car and a
                 beautiful house.So you:</div>
-            <div class="hd">
-                <ul class="normal">
+            <div class="normal">
                     <!-- <li>Basic &nbsp &nbsp +Rs 45000 </li> -->
-                    <li>Buy a car by taking credit from the bank @10% interest p.a</li>
-                    <li>Use all your savings</li>
-                </ul>
+                    <!-- <li>Buy a car by taking credit from the bank @10% interest p.a</li>
+                    <li>Use all your savings</li> -->
+
                 <br>
             </div>
             <div class="text-center ">
