--- a/finlit/html/index.html
+++ b/finlit/html/index.html
@@ -16,7 +16,7 @@
 </style>
     </head>
     <body>
-    <nav id="mainNavbar" class="navbar navbar-dark navbar-expand-md py-0 fixed-top"> <a href="#" class="navbar-brand">FINLIT</a> <button class="navbar-toggler" data-toggle="collapse" data-target="#navLinks"> <span class="navbar-toggler-icon"></span> </button>
+    <nav id="mainNavbar" class="navbar navbar-expand-md py-0 fixed-top navbar-light bg-light"> <a href="#" class="navbar-brand">FINLIT</a> <button class="navbar-toggler" data-toggle="collapse" data-target="#navLinks"> <span class="navbar-toggler-icon"></span> </button>
         <div class="collapse navbar-collapse" id="navLinks">
             <ul class="navbar-nav">
                 <li class="nav-item"> <a href="#home" class="nav-link">HOME</a> </li>
@@ -82,12 +82,15 @@
         </div>
         <div class="space"></div>
     
-        <div class="container2" >
+        <!-- <div class="container2" >
             <h1 class="font-weight-light" id="contact">Get in touch with us</h1>
-            <p class="lead">The webapp is being developed by team Titans. Following are our members.<br><ul class="lead"><li>Shivam Bunge</li><li>Atharva Borawake</li><li>Sanskar Mundra</li></ul></p>
+            <p class="lead">The webapp is being developed by team Titans. Following are our members.<br><ul class="lead"><li>Shivam Bunge</li><li>Atharva Borawake</li></ul></p>
             <p class="lead">Reach us<br>shivambunge9898@gmail.com<br>borawakeatharva2002@gmail.com</p>
-        </div>
+        </div> -->
     </section>
+    <footer class="p-3 mb-2 bg-dark text-white" id="contact">
+        <p>©2021 Finlit <a href="about">Meet Our Team</a></p>
+    </footer>
     <script type="text/javascript">
         $(document).ready(function() {
           $('.carousel').carousel({
