--- a/finlit/html/pg5.html
+++ b/finlit/html/pg5.html
@@ -218,9 +218,8 @@
                         <li>Mutual Funds {{prtf.mutual_funds}} (-27%)</li>
                         <li>Gold funds {{prtf.gold}} (+5%)</li>
                         <li>Bank FD's {{prtf.fds}} (3.5%)</li>
-                        <!-- <li>Professional Tax &nbsp -Rs 4500</li> -->
-                        <!-- <li>Loan &nbsp&nbsp Rs 000</li>  -->
-                        <!-- <li>Total &nbsp&nbsp Rs 51000</li>                    -->
+                        <li>Professional Tax &nbsp -Rs 80,000</li>
+                        <li>Car Loan &nbsp&nbsp -Rs {{prtf.loans}} </li>                   -->
                     </div> <br>
 
                 </ul>
@@ -240,12 +239,10 @@
             </h3> <br>
             <h3 class="cursive options">What to do? </h3>
             <div class="text-center ">
-
-
-                <button type="button" class="ta open_button btn btn-dark"><a href="Investment.html#add">Learn about
-                        Market Crash</a></button>
-
-
+                <form action="advice" method="POST">
+                    {% csrf_token %}
+                    <button class="ta open_button btn btn-dark" type="submit">Learn about market crash.</button>
+                </form>
             </div><br>
 
             <h2 class="normal">So, you plan to buy more of your favourite stocks keeping in mind the fundamentals and
