--- a/finlit/html/pg6.html
+++ b/finlit/html/pg6.html
@@ -184,14 +184,16 @@ h1{
                         <li>Mutual {{prtf.mutual_funds}} (+29%)</li>
                         <li>Gold {{prtf.gold}} (+1%)</li>
                         <li>Bank FD's {{prtf.fds}} (+5%)</li>
-                        <!-- <li>Professional Tax &nbsp -Rs 4500</li> -->
-                        <!-- <li>Loan &nbsp&nbsp Rs 000</li>  -->
-                        <!-- <li>Total &nbsp&nbsp Rs 51000</li>                    -->
+                        <li>Professional Tax &nbsp -Rs 90,000</li>
+                        <li>Car Loan &nbsp&nbsp -Rs {{prtf.loans}} </li>                   
                     </div> <br>                                    
                     </ul>
                     <div class="text-center ">
                         <h3 class="normal options">
-                        <button type="button" class="ta open_button btn btn-dark"><a href="Investment.html">What is Portfolio?</a></button>
+                            <form action="advice" method="POST">
+                                {% csrf_token %}
+                                <button class="ta open_button btn btn-dark" type="submit">What is Portfolio ?</button>
+                            </form>
                         <div class="hd cursive">                        
                             A portfolio is a collection of financial investments like stocks, bonds, commodities, cash, and cash equivalents, including closed-end funds
                         </div>
@@ -219,8 +221,10 @@ h1{
 
                 <div class="text-center ">
                     <h3 class="normal options">
-                    <button type="button" class="ta open_button btn btn-dark"><a href="Investment.html#famous">Famous People</a></button>
-                    
+                        <form action="advice" method="POST">
+                            {% csrf_token %}
+                            <button class="ta open_button btn btn-dark" type="submit">Famous People</button>
+                        </form>
                 </h3> 
                 </div><br><br>
                 <div class="text-center">
