added progress and adivce page ID's

--- a/finlit/html/advice.html
+++ b/finlit/html/advice.html
@@ -1,4 +1,4 @@
-{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -9,7 +9,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Invest</title>
     <script src="https://kit.fontawesome.com/b99e675b6e.js"></script>
-    <link rel="stylesheet" href="{% static 'investment1.css' %}">
+    <!-- <link rel="stylesheet" href="{% static 'investment1.css' %}"> -->
+    <link rel="stylesheet" href="investment1.css">
 </head>
 
 <body>
@@ -43,7 +44,7 @@
             <div class="header" id="basic">
                 <h1>• Basic Terminology<h1>
             </div>
-            <div class="header">
+            <div class="header" id="inf-rate">
                 <h2>1) What is inflation rate?<h2>
             </div>
             <div> Inflation meaning: Inflation refers to the rise in the prices of most goods and services of daily or
@@ -128,7 +129,7 @@
             <div class="vid">
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/ztEEORMu_3o" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
-            <div class="header">
+            <div class="header" id="sip">
                 <h2>10) What is SIP?<h2>
             </div>
             <div>A systematic investment plan is an investment vehicle offered by many mutual funds to investors,
@@ -318,7 +319,7 @@
             <div class="header" id="add">
                 <h1>• Additional Reading<h1>
             </div>
-            <div class="header">
+            <div class="header" id="save-tax">
                 <h2>1) Ways to save tax<h2>
             </div><br>
             <div><a href="https://www.paisabazaar.com/tax/how-to-save-income-tax/" target="_blank">To know more click
@@ -328,7 +329,7 @@
             </div><br>
             <div><a href="https://groww.in/blog/books-investing-stock-markets-trading/" target="_blank">To know more
                     click here</a></div>
-            <div class="header">
+            <div class="header" id="crash">
                 <h2>3) What is a stock market crash?<h2>
             </div>
             <div>A stock market crash is a rapid and often unanticipated drop in stock prices. A stock market crash can
