--- a/finlit/html/pg1-eng.html
+++ b/finlit/html/pg1-eng.html
@@ -178,11 +178,9 @@ h1{
 
                 <div class="text-center ">
                     <h3 class="normal options">
-                        <form action="prof_ch/advice" method="POST">
-                            {% csrf_token %}
-                            <button class="ta open_button btn btn-dark" type="submit">Take Advice</button>
+                        
+                        <button class="ta open_button btn btn-dark" type="submit"><a href="{% static 'advice.html' %}">Take advice</a></button>
 
-                        </form>
                         <div class="hd">                        
                             <li>What are Stocks and Stock Market? </li>
                             <li>What are Mutual Funds?</li>
